service kubeadm enabled

--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -20,3 +20,7 @@ repos_to_enable:
 ### DODAC INSTALACJE KOMENDY KUBEADM
 required_packages:
   - kubeadm
+
+# Services required to be enabled on boot
+required_services:
+  - "kubelet"
