--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -20,6 +20,7 @@ repos_to_enable:
 ### DODAC INSTALACJE KOMENDY KUBEADM
 required_packages:
   - kubeadm
+  - "containerd.io"
 
 # Services required to be enabled on boot
 required_services:
