--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -1,7 +1,20 @@
 ---
-
 - name: Execute join command
   command: "/exports/control-plane/kube_join_command.sh"
   args:
     creates: "/etc/kubernetes/kubelet.conf"
   ignore_errors: true
+
+- name: Zmiana w configu containerd
+  command: sed -i 's/disabled_plugins/\# disabled_plugins/g' /etc/containerd/config.toml
+
+- name: Restart uslugi containerd 
+  service: 
+    name: containerd
+    state: restarted
+    
+- name: Wlaczenie uslugi containerd przy starcie systemu
+  service: 
+    name: containerd
+    enabled: yes
+
