--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -33,7 +33,8 @@ required_packages:
   - "docker-ce"
   - "bash-completion"
   - "containerd.io"
-
+  - "iproute-tc"
+ 
 # Services required to be enabled on boot
 required_services:
   - "kubelet"
