--- a/Ansible/group_vars/grp_nodes.yml
+++ b/Ansible/group_vars/grp_nodes.yml
@@ -25,6 +25,7 @@ required_packages:
   - "docker-ce"
   - "bash-completion"
   - "containerd.io"
+  - "iproute-tc"
  
 # Services required to be enabled on boot
 required_services:
