--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -34,7 +34,10 @@ required_packages:
   - "bash-completion"
   - "containerd.io"
   - "iproute-tc"
+  - "firewalld"
  
 # Services required to be enabled on boot
 required_services:
   - "kubelet"
+  - "firewalld"
+  - "docker"
