--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -41,3 +41,13 @@ required_services:
   - "kubelet"
   - "firewalld"
   - "docker"
+
+firewall_services:
+  - "nfs"
+
+firewall_tcp_ports: 
+  # Kubernetes
+  - "6783"
+  - "10250"
+  - "10255"
+  - "30000-32767"
