--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -28,3 +28,20 @@
     enabled: true
   loop: "{{ required_services }}"
   when: "required_services is defined"
+
+### FIREWALL ###
+- name: Firewalld - Dodanie serwisów z listy
+  ansible.posix.firewalld:
+  service: "{{ item }}"
+  permanent: true
+  state: enabled
+  loop: "{{ firewall_services }}" 
+  when: "{{ firewall_services is defined }}"
+  
+- name: Firewalld - Dodanie portow tcp z listy
+  ansible.posix.firewalld:
+  port:  "{{ item}}/tcp"
+  permanent: true
+  state: enabled
+  loop: "{{ firewall_tcp_ports }}" 
+  when: "{{ firewall_tcp_ports is defined }}"
