--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -46,5 +46,18 @@
   loop: "{{ firewall_tcp_ports }}" 
   when: "firewall_tcp_ports is defined"
 
+### TODO - dodac notify, firewall powinien byc przeladowany po dodaniu czegos do uslugi
 - name: Firewalld - Przeladowanie uslugi
   command: firewall-cmd --reload
+
+
+### SELINUX ###
+- name: SELinux - wylaczenie tymczasowe
+  command: setenforce 0
+
+- name: SELinux - wylaczenie trwale
+  command: "sed -i --follow-symlinks 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/sysconfig/selinux"
+
+### Ip-tables bridge? 
+- name: ip-tables bridge? - zmienic na modul zamiast command
+  command: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
