--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -59,5 +59,5 @@
   command: "sed -i --follow-symlinks 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/sysconfig/selinux"
 
 ### Ip-tables bridge? 
-- name: ip-tables bridge? - zmienic na modul zamiast command
-  command: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
+# - name: ip-tables bridge? - zmienic na modul zamiast command
+  # command: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
