--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -27,8 +27,8 @@
   - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
   - "sudo sysctl --system"
 
-- name: Execute join command
-  command: "/exports/control-plane/kube_join_command.sh"
-  args:
-    creates: "/etc/kubernetes/kubelet.conf"
-  ignore_errors: true
+# - name: Execute join command
+  # command: "/exports/control-plane/kube_join_command.sh"
+  # args:
+    # creates: "/etc/kubernetes/kubelet.conf"
+  # ignore_errors: true
