--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -32,17 +32,11 @@ required_packages:
   - "containerd.io"
   - "iproute-tc"
   - "firewalld"
-  # Kubernetes
-  # - "kubectl"
-  # - "kubelet"
-  # - "kubeadm"
  
 # Services required to be enabled on boot
 required_services:
   - "firewalld"
   - "docker"
-  # Kubernetes
-  # - "kubelet"
 
 firewall_services:
   - "nfs"
@@ -51,9 +45,8 @@ firewall_tcp_ports:
   # Docker swarm 
   - "2377"
   - "7946"
-  # Kubernetes
-  # - "6443"
-  # - "6783"
-  # - "10250"
-  # - "10255"
-  # - "30000-32767"
+
+firewall_udp_ports: 
+  # Docker swarm
+  - "7946"
+  - "4789"
