--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -12,13 +12,13 @@
     name: containerd
     enabled: yes
 
-# - name: Rozwiazanie problemu enable bridge-nf-call-iptables
-  # command: "{{ item }}"
-  # with_items: 
-  # - "modprobe br_netfilter"
-  # - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
-  # - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
-  # - "sysctl --system"
+- name: Rozwiazanie problemu enable bridge-nf-call-iptables
+  command: "{{ item }}"
+  with_items: 
+  - "modprobe br_netfilter"
+  - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
+  - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  - "sysctl --system"
 
 - name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
   command: "{{ item }}"
@@ -27,3 +27,8 @@
   - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
   - "sudo sysctl --system"
 
+- name: Initialize Docker Swarm 
+  docker_swarm: 
+    state: present
+    listen_addr: "{{ ansible_eth0.ipv4.address }}:2377"
+    advertise_addr: "{{ ansible_eth0.ipv4.address }}"
