--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -28,7 +28,7 @@
   - "sudo sysctl --system"
 
 - name: Docker Swarm - Join cluster 
-  docker_swarm:
+  community.docker.docker_swarm:
     state: joined
     remote_addr: "{{ control_plane_ip }}:2377"
     token: "{{ swarm_join_token }}"
