docker_swarm_role

--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -23,6 +23,7 @@ repos_to_enable:
 roles_to_install:
   - 'community.general'
   - 'ansible.posix'
+  - "community.docker"
 
 # Required packages 
 required_packages:
