--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -51,7 +51,7 @@
     port:  "{{ item}}/udp"
     permanent: true
     state: enabled
-  loop: "{{ firewall_udp }}" 
+  loop: "{{ firewall_udp_ports }}" 
   when: "firewall_tcp_ports is defined"
 
 
