--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -12,23 +12,28 @@
     name: containerd
     enabled: yes
 
-- name: Rozwiazanie problemu enable bridge-nf-call-iptables
-  command: "{{ item }}"
-  with_items: 
-  - "modprobe br_netfilter"
-  - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
-  - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
-  - "sysctl --system"
+# - name: Rozwiazanie problemu enable bridge-nf-call-iptables
+  # command: "{{ item }}"
+  # with_items: 
+  # - "modprobe br_netfilter"
+  # - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
+  # - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  # - "sysctl --system"
 
-- name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
-  command: "{{ item }}"
-  with_items: 
-  - "sysctl -w net.ipv4.ip_forward=1"
-  - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
-  - "sudo sysctl --system"
+# - name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
+  # command: "{{ item }}"
+  # with_items: 
+  # - "sysctl -w net.ipv4.ip_forward=1"
+  # - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  # - "sudo sysctl --system"
 
-- name: Initialize Docker Swarm 
+- name: Docker Swarm - Inicjalizacja
   community.docker.docker_swarm: 
     state: present
     listen_addr: "{{ ansible_eth0.ipv4.address }}:2377"
     advertise_addr: "{{ ansible_eth0.ipv4.address }}"
+
+- name: Docker Swarm - Pobranie komendy pozwalajacej na dolaczenie do clustra 
+  command: 
+    cmd: "docker swarm join-token worker -q"
+  register: swarm_join_token_worker  
