--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -12,26 +12,26 @@
     name: containerd
     enabled: yes
 
-- name: Rozwiazanie problemu enable bridge-nf-call-iptables
-  command: "{{ item }}"
-  with_items: 
-  - "modprobe br_netfilter"
-  - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
-  - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
-  - "sysctl --system"
+# - name: Rozwiazanie problemu enable bridge-nf-call-iptables
+  # command: "{{ item }}"
+  # with_items: 
+  # - "modprobe br_netfilter"
+  # - "sysctl -w net.bridge.bridge-nf-call-iptables=1"
+  # - "echo \"net.bridge.bridge-nf-call-iptables = 1\" | tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  # - "sysctl --system"
 
-- name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
-  command: "{{ item }}"
-  with_items: 
-  - "sysctl -w net.ipv4.ip_forward=1"
-  - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
-  - "sudo sysctl --system"
+# - name: Rozwiazanie problemu ERROR FileContent--proc-sys-net-ipv4-ip_forward
+  # command: "{{ item }}"
+  # with_items: 
+  # - "sysctl -w net.ipv4.ip_forward=1"
+  # - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
+  # - "sudo sysctl --system"
 
 - name: Docker Swarm - Join cluster 
   community.docker.docker_swarm:
     state: joined
     remote_addr: "{{ control_plane_ip }}:2377"
-    token: "{{ swarm_join_token }}"
+    token: "{{ swarm_join_token_worker }}"
   register: join_result
 
 - debug:
