--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -43,3 +43,4 @@ runcmd:
   # - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
   # Ansible-playbook 
   # - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
+  - nmcli general hostname control-plane 
