--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -1,5 +1,4 @@
 #cloud-config
-hostname: control-plane
 users:
   - cloud-user
   - name: ans_mariusz
@@ -39,8 +38,13 @@ runcmd:
   - /usr/bin/systemctl restart sshd
   ### Ansible 
   # Ansible-galaxy 
-  # - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
-  # - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
+  - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
+  - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
+  - ansible-galaxy collection install community.docker -p /home/ans_mariusz/.ansible/collections
+  - /usr/bin/python3 -m ensurepip --upgrade
+  - /usr/bin/python3 -m pip install docker
+
+  ### Hostname
+  - nmcli general hostname control-plane 
   # Ansible-playbook 
   # - ansible-playbook /mnt/ansible/main.yml -u ans_mariusz
-  - nmcli general hostname control-plane 
