--- a/Ansible/roles/common/tasks/main.yml
+++ b/Ansible/roles/common/tasks/main.yml
@@ -57,16 +57,13 @@
   when: "firewall_tcp_ports is defined"
   notify: "reload firewall"
 
-
-
-
 ### SELINUX ###
-# - name: SELinux - wylaczenie tymczasowe
-  # command: setenforce 0
+- name: SELinux - wylaczenie tymczasowe
+  command: setenforce 0
 
-# - name: SELinux - wylaczenie trwale
-  # command: "sed -i --follow-symlinks 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/sysconfig/selinux"
+- name: SELinux - wylaczenie trwale
+  command: "sed -i --follow-symlinks 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/sysconfig/selinux"
 
-### Ip-tables bridge? 
-# - name: ip-tables bridge? - zmienic na modul zamiast command
-  # command: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
+# Ip-tables bridge? 
+- name: ip-tables bridge? - zmienic na modul zamiast command
+  command: "echo '1' > /proc/sys/net/bridge/bridge-nf-call-iptables"
