--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -38,11 +38,12 @@ runcmd:
   - /usr/bin/systemctl restart sshd
   ### Ansible 
   # Ansible-galaxy 
-  - ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
-  - ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
-  - ansible-galaxy collection install community.docker -p /home/ans_mariusz/.ansible/collections
+  - /usr/bin/ansible-galaxy collection install community.general -p /home/ans_mariusz/.ansible/collections
+  - /usr/bin/ansible-galaxy collection install ansible.posix -p /home/ans_mariusz/.ansible/collections
+  - /usr/bin/ansible-galaxy collection install community.docker -p /home/ans_mariusz/.ansible/collections
   - /usr/bin/python3 -m ensurepip --upgrade
   - /usr/bin/python3 -m pip install docker
+  - /usr/bin/chown -R ans_mariusz:ans_mariusz /home/ans_mariusz/.ansible
 
   ### Hostname
   - nmcli general hostname control-plane 
