--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -27,6 +27,10 @@
   # - "echo 'net.ipv4.ip_forward = 1' | sudo tee /etc/sysctl.d/99-kubernetes-cri.conf"
   # - "sudo sysctl --system"
 
+- name: Swarm token debug
+  debug: 
+    msg: "{{ swarm_join_token_worker.stdout }}"
+
 - name: Docker Swarm - Join cluster 
   community.docker.docker_swarm:
     state: joined
