--- a/Ansible/roles/nfs_server/tasks/main.yml
+++ b/Ansible/roles/nfs_server/tasks/main.yml
@@ -32,6 +32,8 @@
   file:
     path: "{{ item }}"
     state: directory
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
   loop: "{{ nfs_export_dirs }}"
 
 - name: Add NFS export entry to /etc/exports
@@ -40,6 +42,8 @@
     line: "{{ item }} {{ nfs_export_options }}"
     create: yes
   loop: "{{ nfs_export_dirs }}"
+  notify: "nfs service restart"
 
 - name: Reload NFS server configuration
   command: exportfs -ra
+  listen: "nfs service restart"
