--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -15,4 +15,6 @@ nfs_export_dirs:
   - "/mnt/repos"
   - "/mnt/meta"
   - "/mnt/ansible"
-  - "/exports/control-plane"
+
+nfs_write_export_dirs:
+  - "/exports/control_plane"
