member_corrected_test

--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -12,7 +12,7 @@
     name: containerd
     enabled: yes
 
-
+### DOCKER SWARM INIT ###
 - name: Docker Swarm - Check if node is part of Swarm
   command: "docker info | grep -w '^.*Swarm.*active'"
   ignore_errors: true
@@ -20,15 +20,16 @@
 
 - name: Docker Swarm - Initialization
   command: "docker swarm init"
-  when: swarm_check_result.rc != 0
+  when: swarm_check_result.stdout is not search('active') 
   register: swarm_init_result
 
 - name: Docker Swarm - Node is already part of the cluster
   debug:
     msg: "Machine is already a member of the cluster"
-  when: swarm_check_result.rc == 0
+  when: swarm_check_result.stdout is search('active') 
+###
 
-
+### SWARM - Get the join token ###
 - name: Docker Swarm - Pobranie komendy pozwalajacej na dolaczenie do clustra 
   command: 
     cmd: "docker swarm join-token worker -q"
