--- a/Ansible/roles/control_plane/tasks/main.yml
+++ b/Ansible/roles/control_plane/tasks/main.yml
@@ -14,7 +14,7 @@
 
 ### DOCKER SWARM INIT ###
 - name: Docker Swarm - Check if node is part of Swarm
-  command: "docker info | grep -w '^.*Swarm.*active'"
+  shell: "docker info | grep '^.*Swarm.*active'"
   ignore_errors: true
   register: swarm_check_result
 
