--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -19,7 +19,7 @@
 
 ### DOCKER SWARM JOIN ###
 - name: Docker Swarm - Check if node is part of Swarm
-  shell: "docker info | grep '^.*Swarm.*active'"
+  shell: "docker info | grep -v 'inactive' | grep '^.*Swarm.*active'"
   ignore_errors: true
   register: swarm_check_result
 
