--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -22,10 +22,16 @@
   shell: "docker info | grep -v 'inactive' | grep '^.*Swarm.*active'"
   ignore_errors: true
   register: swarm_check_result
-  notify: "join_swarm"
+
+- name: Docker Swarm - Initialization
+  command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ tmp_swarm_join_token_worker.stdout_lines }}"
+  register: swarm_init_result
+  when: swarm_check_result.rc != 0
+
 
 - name: Docker Swarm - Node is already part of the cluster
   debug:
     msg: "Machine is already a member of the cluster"
-  when: swarm_check_result.stdout is search('active') 
+  when: swarm_check_result.rc = 0
 ###
+
