--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -17,27 +17,16 @@
     src: "/exports/control-plane/token.txt"
   register: swarm_join_token_worker
 
-
+### DOCKER SWARM JOIN ###
 - name: Docker Swarm - Check if node is part of Swarm
   shell: "docker info | grep -v 'inactive' | grep '^.*Swarm.*active'"
-  ignore_errors: true
   register: swarm_check_result
-  rescue:
-    - name: Docker Swarm - Initialization
-      command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ tmp_swarm_join_token_worker.stdout_lines }}"
-      register: swarm_init_result
 
+- name: Docker Swarm - Initialization
+  command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ tmp_swarm_join_token_worker.stdout_lines }}"
+  register: swarm_init_result
+  when: swarm_check_result.rc != 0
 
-
-# ### DOCKER SWARM JOIN ###
-# - name: Docker Swarm - Check if node is part of Swarm
-  # shell: "docker info | grep -v 'inactive' | grep '^.*Swarm.*active'"
-  # ignore_errors: true
-  # register: swarm_check_result
-  # rescue:
-    # - name: Docker Swarm - Initialization
-      # command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ tmp_swarm_join_token_worker.stdout_lines }}"
-      # register: swarm_init_result
 
 - name: Docker Swarm - Node is already part of the cluster
   debug:
