--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -26,7 +26,7 @@
 - name: Docker Swarm - Initialization
   command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ tmp_swarm_join_token_worker.stdout_lines }}"
   register: swarm_init_result
-  when: not defined('swarm_check_result') or swarm_check_result.rc != 0
+  when: swarm_check_result is not defined or swarm_check_result.rc != 0
 
 - name: Docker Swarm - Node is already part of the cluster
   debug:
