--- a/Ansible/roles/node/tasks/main.yml
+++ b/Ansible/roles/node/tasks/main.yml
@@ -23,6 +23,10 @@
   register: swarm_check_result
   ignore_errors: true
 
+- name: Print Docker Swarm Join Token for Worker
+  debug:
+    var: swarm_join_token_worker.stdout_lines
+
 - name: Docker Swarm - Initialization
   command: "docker swarm join --advertise-addr {{ control_plane_ip }}:2377 --token {{ swarm_join_token_worker.stdout_lines }}"
   register: swarm_init_result
