--- a/Terraform/modules/control_plane/user-data.cfg
+++ b/Terraform/modules/control_plane/user-data.cfg
@@ -15,9 +15,9 @@ chpasswd:
   expire: False
 runcmd:
   ### Network
-  - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
-  - /usr/bin/nmcli connection down "System eth0"
-  - /usr/bin/nmcli connection up "System eth0"
+  # - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address 192.168.2.10/24 ipv4.gateway 192.168.2.1 ipv4.dns "8.8.8.8 8.8.4.4"
+  # - /usr/bin/nmcli connection down "System eth0"
+  # - /usr/bin/nmcli connection up "System eth0"
   ### 
   ### Mounts
   ## Dirs
