dynamic cloud-init

--- a/Terraform/modules/node/user-data.cfg
+++ b/Terraform/modules/node/user-data.cfg
@@ -1,5 +1,5 @@
 #cloud-config
-hostname: node$INSTANCE_ID
+hostname: my-instance-${hostname}
 users:
   - name: ans_mariusz
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
@@ -27,3 +27,4 @@ runcmd:
   ### SSH
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
+  - nmcli general hostname ${hostname}
