--- a/Terraform/modules/node/user-data.cfg
+++ b/Terraform/modules/node/user-data.cfg
@@ -1,5 +1,4 @@
 #cloud-config
-hostname: my-instance-${hostname}
 users:
   - name: ans_mariusz
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
@@ -13,18 +12,8 @@ chpasswd:
     ans_mariusz:mypassword
   expire: False
 runcmd:
-  ### Mounts
-  ## Dirs
-  # - /usr/bin/mkdir /mnt/meta
-  # - /usr/bin/mkdir /mnt/ansible
-  # - /usr/bin/mkdir /mnt/repos
-  # ## Fstab
-  # - /usr/bin/echo "/dev/sr0 /mnt/repos iso9660 loop 0 0" >> /etc/fstab
-  # - /usr/bin/echo "/dev/sr1 /mnt/meta iso9660 loop 0 0" >> /etc/fstab
-  # - /usr/bin/echo "/dev/sr2 /mnt/ansible iso9660 loop 0 0" >> /etc/fstab
-  # Copy all the repos configuration files to the yum.repos.d
-  # - /usr/bin/cp /mnt/meta/repo_files/* /etc/yum.repos.d/
   ### SSH
   - /usr/bin/sed -i "s/PasswordAuthentication no/PasswordAuthentication yes/g" /etc/ssh/sshd_config
   - /usr/bin/systemctl restart sshd
-  - nmcli general hostname ${hostname}
+  - /usr/bin/nmcli general hostname ${hostname}
+  - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address "${ip}"/24 ipv4.gateway 192.168.1.1 ipv4.dns "8.8.8.8 8.8.4.4"  
