--- a/Terraform/modules/node/user-data.cfg
+++ b/Terraform/modules/node/user-data.cfg
@@ -17,3 +17,5 @@ runcmd:
   - /usr/bin/systemctl restart sshd
   - /usr/bin/nmcli general hostname ${hostname}
   - /usr/bin/nmcli connection modify "System eth0" ipv4.method manual ipv4.address "${ip}"/24 ipv4.gateway 192.168.1.1 ipv4.dns "8.8.8.8 8.8.4.4"  
+  - /usr/bin/nmcli connection down "System eth0"
+  - /usr/bin/nmcli connection up "System eth0"
