--- a/Ansible/group_vars/all.yml
+++ b/Ansible/group_vars/all.yml
@@ -6,6 +6,11 @@ ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
 repo_files_source: "/mnt/meta/repo_files"
 
+local_nfs_mount_paths: "{{ nfs_export_dirs + nfs_write_export_dirs }}"
+
+
+
+
 ### Main 
 main_user: ans_mariusz
 control_plane_ip: 192.168.1.10
