nfs permissions changed

--- a/Ansible/group_vars/grp_control_plane.yml
+++ b/Ansible/group_vars/grp_control_plane.yml
@@ -1,5 +1,5 @@
 ---
-nfs_export_options: "*(rw,sync,no_root_squash,no_all_squash)"
+nfs_export_options: "*(rw,sync)"
 
 ### Local iso mounts ###
 local_iso_mounts: 
