--- a/Ansible/main.yml
+++ b/Ansible/main.yml
@@ -4,10 +4,10 @@
   remote_user: "{{ main_user }}"
   become: yes
   
-  roles:
+#  roles:
 #    - common
 #    - nfs_server 
-    - control_plane
+#    - control_plane
 
 - name: Set up node machines
   hosts: grp_nodes
